<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="com.weapon.joker.app.mine.MineViewModel"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_color_grey_100"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_mine_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/material_color_grey_1001"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <ImageView
                android:id="@+id/iv_mine_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@drawable/default_user_avatar"/>

            <TextView
                android:id="@+id/tv_mine_login_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/iv_mine_avatar"
                android:text="@string/unlogin"
                android:textColor="@color/material_text_color_black_text"
                android:textSize="13sp"/>

            <Button
                android:id="@+id/bt_mine_login_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_mine_login_now"
                android:padding="10dp"
                android:text="@string/login_now"
                android:onClick="@{model.loginOnClick}"
                android:shadowColor="@color/material_color_red_500"
                android:textColor="@color/material_text_color_black_text"
                android:textSize="16sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_mine_logined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingBottom="15dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_mine_avatar_logined"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:src="@drawable/default_user_avatar"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/tv_mine_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/mine_nick_name"
                    android:textColor="@color/material_text_color_black_text"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/bt_mine_signature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_mine_nickname"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/mine_signature"
                    android:textColor="@color/material_text_color_black_text"
                    android:textSize="13sp"/>
            </RelativeLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/material_text_color_black_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_color_grey_1001"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_mine_video_setting"
                style="@style/MineStyle"
                android:text="@string/video_play_setting"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/public_text_padding"
                android:background="@color/material_text_color_black_divider"/>

            <TextView
                android:id="@+id/tv_mine_share"
                style="@style/MineStyle"
                android:onClick='@{model.shareOnClick}'
                android:text="@string/share_weapon"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/public_text_padding"
                android:background="@color/material_text_color_black_divider"/>

            <TextView
                android:id="@+id/tv_mine_qr_code"
                style="@style/MineStyle"
                android:layout_width="match_parent"
                android:text="@string/my_qrcode"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/public_text_padding"
                android:background="@color/material_text_color_black_divider"/>

            <TextView
                android:id="@+id/tv_mine_update"
                style="@style/MineStyle"
                android:text="@string/version_update"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/material_text_color_black_divider"/>

        </LinearLayout>


    </LinearLayout>

</layout>